$Header$

MBDyn (C) is a multibody analysis code.
http://www.mbdyn.org

Copyright (C) 1996-2012

Pierangelo Masarati     <masarati@aero.polimi.it>
Paolo Mantegazza        <mantegazza@aero.polimi.it>


MBDyn 1.X-Devel
	Enhancements:
		- added screw joint (Mauro Manetti & Marco Morandini)
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- simplify escaping of delimiter in input

MBDyn 1.5.3
	Enhancements:
		- added forces NetCDF support (Louis Gagnon)
		- added support for modal damping matrix in modal joint db
		- femgen(1) more user friendly (and documented)
	Backward compatibility issues:
		- nodes and elements now handled in strict input order
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix multiple statements bug in string drive caller
		- fix (harmless) memory issue in structural mapping force
		- fix integer division bug in aeromodal element

MBDyn 1.5.2
	Enhancements:
		- added AfterPredict & Restart to module-octave
		  (Reinhard Resch)
		- added inverse square constitutive law
	Backward compatibility issues:
		- "index" form for priv data is deprecated
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix restart bug (Reinhard Resch)
		- fix initialization issues (Marco Morandini)
		- fix dist of mbc_py_interface.py (noted by Gaël Ecorchard)

MBDyn 1.5.1
	Enhancements:
		- added "ifndef" declaration modifier for var redefinition
		- added module-nodedistdrive (Reinhold Resch)
	Backward compatibility issues: